# edusys

./: .env.example  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
agents/: RAG_example.py  README.md  __init__.py  admin.py  apps.py  architecture.md  celery.py  config.py  example_usage.py  implementation_plan.md  knowledge_base.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
agents/agent/: __init__.py  config.py  core.py  factory.py
agents/api/: __init__.py  urls.py  views.py
agents/knowledge_base/: __init__.py  builder.py  documents.py  updater.py
agents/management/: __init__.py
agents/management/commands/: __init__.py  init_agents.py  update_knowledge_base.py
agents/migrations/: 0001_initial.py  0002_knowledge_document_course_file.py  0003_aiinteraction_course_nullable.py  __init__.py
agents/templates/agents/: ai_assistant.html
agents/tools/: __init__.py  base_tool.py  retriever_tool.py
assignments/: apps.py  models.py  urls.py  views.py
assignments/migrations/: 0001_initial.py  0002_assignmentsubmission_comment_and_more.py
assignments/templates/assignments/: assignment_confirm_delete.html  assignment_detail.html  assignment_form.html  assignment_list.html
courses/: apps.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_coursefile.py
courses/templates/courses/: announcement_confirm_delete.html  announcement_detail.html  announcement_form.html  course_announcement.html  course_detail.html  course_files.html  course_form.html  (+4 more)
edusys/: asgi.py  settings.py  urls.py  views.py  wsgi.py
query/: __init__.py  apps.py
students/: admin.py  models.py  views.py
students/migrations/: 0001_initial.py
students/templates/: base.html
templates/admin/: login.html
users/: apps.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_college_remove_user_gender_and_more.py
(+5 files in other folders)
